--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <button id="rollButton">Roll the dice!</button>
 
             <div class="roll-history">
-
+                <p> Results:
             </div>
         </div>
 
