--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
             <br><br><br>
 
-            <button id="rollButton">Roll the dice!</button>
+            <button id="rollButton" onclick="roll_all_dice()">Roll the dice!</button>
 
             <div class="roll-history">
                 <p> Results:
