--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 
             <br><br><br>
 
-            <button onclick="main.roll_all_dice()">Roll the dice!</button>
+            <button onclick="src.roll_all_dice()">Roll the dice!</button>
 
             <div class="roll-history">
-                <p> Results:
+                <p> Results: </p>
             </div>
         </div>
 
