--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 
             <div class="roll-history">
                 <p> Results: </p>
+                <p> yippie: </p>
             </div>
         </div>
 
