--- a/index.html
+++ b/index.html
@@ -49,11 +49,10 @@
 
             <br><br><br>
 
-            <button onclick="src.roll_all_dice()">Roll the dice!</button>
+            <button id="rollButton">Roll the dice!</button>
 
             <div class="roll-history">
-                <p> Results: </p>
-                <p> yippie: </p>
+                <p> Results:
             </div>
         </div>
 
