--- a/index.html
+++ b/index.html
@@ -50,10 +50,7 @@
             <br><br><br>
 
             <button id="rollButton">Roll the dice!</button>
-
-            <div class="roll-history">
-                <p> Results:
-            </div>
+                <p id="roll-history"> Results:   </p>
         </div>
 
         <!-- End of your code -->
